# pytest-tdd

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: master.yml
docs/: conf.py  index.rst
docs/api/: pytest_tdd_tree.rst
src/pytest_tdd/: __init__.py  __main__.py  cli.py  misc.py  script.py  tdd.py  tools.py  tree.py
src/pytest_tdd/acbox/: trees.py
tests/: conftest.py  requirements.txt  test_cli.py  test_main.py  test_misc.py  test_tdd.py  test_tools.py  test_tree.py
tests/acbox/: test_trees.py
tests/data/test_tdd/: coverage.json  junit.xml
