[build-system]
requires = [
    "hatchling",
    "hatch-ci",
    "typing-extensions",
    "jinja2",
    "pydevd-pycharm~=232.10072.31"
]
build-backend = "hatchling.build"

[project]
name = "pytest-tdd"
dynamic = ["version"]
description = "run pytest on a python module"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Antonio cavallo", email = "a.cavallo@cavallinux.eu" },
]
maintainers = [
    {name = "Antonio cavallo", email = "a.cavallo@cavallinux.eu" },
]
keywords = [ "pre-commit", ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "click",
    "pytest",
    "pytest-coverage",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-tabs",
    "sphinx-design",
    "myst-parser",
    "sphinx-book-theme",
]

dev = [
    "lxml",
    "mypy",
    "pytest-print",
    "pytest-cov",
    "pytest-html",
    "ruff",
]


[project.urls]
Homepage = "https://github.com/cav71/pytest-tdd"
Documentation = "https://github.com/cav71/pytest-tdd"
Repository = "https://github.com/cav71/pytest-tdd"

[project.scripts]
pytest-tdd = "pytest_tdd:script.main"

[tool.hatch.version]
source = "ci"
version-file = "src/pytest_tdd/__init__.py"

[tool.hatch.build]
ignore-ci = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_tdd"]

[tool.mypy]
python_version = "3.13"
show_error_codes = true
strict = true
