[metadata]
name = qualitor
description = run pytest on a python module
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/cav71/qualitor
author = Antonio Cavallo
author_email = a.cavallo@cavallinux.eu
license = BSD 2-clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://qualitor.readthedocs.io
    Source = https://github.com/cav71/qualitor
    Tracker = https://github.com/cav71/qualitor/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
python_requires = >=3.8
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    screed = qualitor.__main__:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s

